[gd_scene load_steps=49 format=3 uid="uid://ds3e02mwx5v1i"]

[ext_resource type="Script" uid="uid://clyc4g3o3ko0w" path="res://SpencerStuff/Scripts/level_management.gd" id="1_hp8h4"]
[ext_resource type="PackedScene" uid="uid://dacojs786gojr" path="res://Assets/3D Models/HH_Art_Pinch_V2.fbx" id="2_65vvi"]
[ext_resource type="Script" uid="uid://cdcf2xh2ahv2s" path="res://SpencerStuff/Scripts/auto_movement.gd" id="3_k0vax"]
[ext_resource type="Texture2D" uid="uid://b8vx7fxb5dgvh" path="res://Assets/HH_Art_NewGuySprite_V2.png" id="4_8kvwi"]
[ext_resource type="Script" uid="uid://crics4un5vy5o" path="res://SpencerStuff/Scripts/camera_move_pinch.gd" id="5_h0fs4"]
[ext_resource type="PackedScene" uid="uid://dwi1w1lt0qxci" path="res://Assets/3D Models/HH_Art_Ligghtbulb_V1_.fbx" id="6_im5b3"]
[ext_resource type="Script" uid="uid://dyqr6v4qlgjx0" path="res://SpencerStuff/Scripts/right_room_trigger.gd" id="7_ujorc"]
[ext_resource type="Script" uid="uid://ntaiajavyrk2" path="res://SpencerStuff/Scripts/left_room_trigger.gd" id="8_4byhf"]
[ext_resource type="Script" uid="uid://dlmnsqqh6kt8h" path="res://SpencerStuff/Scripts/main_room_trigger.gd" id="9_rrcc2"]
[ext_resource type="Script" uid="uid://bg4bius86njfo" path="res://SpencerStuff/Scripts/left_door.gd" id="10_jv0w1"]
[ext_resource type="Texture2D" uid="uid://bekut30xmeumk" path="res://Assets/Lock.png" id="11_1s2xu"]
[ext_resource type="Script" uid="uid://bn5vexagvnj6c" path="res://SpencerStuff/Scripts/right_door.gd" id="12_8t08r"]
[ext_resource type="PackedScene" uid="uid://07r1c3ba45w3" path="res://Assets/3D Models/HH_Art_DoorOpenLeftAnim_V1.fbx" id="12_wjoec"]
[ext_resource type="PackedScene" uid="uid://dqdrihkiouy1o" path="res://Assets/3D Models/HH_Art_locks_openAnim_V1.fbx" id="13_8kvwi"]
[ext_resource type="Texture2D" uid="uid://bjgv41ufsr321" path="res://Assets/key.png" id="13_now7m"]
[ext_resource type="PackedScene" uid="uid://lgf83rme0ewf" path="res://Assets/3D Models/HH_Art_DoorOpenRightAnim_v1.fbx" id="14_6vn0d"]
[ext_resource type="Script" uid="uid://bmqvig0exmdt3" path="res://SpencerStuff/Scripts/generator.gd" id="14_mnt33"]
[ext_resource type="PackedScene" uid="uid://bmh2gyqlmrijl" path="res://Assets/3D Models/HH_Art_Generator_V1_.fbx" id="15_mvhw6"]
[ext_resource type="Script" uid="uid://cqxfonrb48820" path="res://SpencerStuff/Scripts/puddle.gd" id="16_vhof8"]
[ext_resource type="PackedScene" uid="uid://clhua17db53gv" path="res://Assets/3D Models/HH_Art_Puddle_v1.fbx" id="17_j6cut"]
[ext_resource type="Script" uid="uid://ct1s4dt2hpjix" path="res://SpencerStuff/Scripts/fusebox.gd" id="18_1d7ht"]
[ext_resource type="Script" uid="uid://d26s1jhjd3mxd" path="res://SpencerStuff/Scripts/gate.gd" id="19_or1os"]
[ext_resource type="Texture2D" uid="uid://ctdxuq3u8ho6y" path="res://Assets/TH_25094221_25187221_001.jpg" id="20_4rm4j"]
[ext_resource type="PackedScene" uid="uid://dllmxns1qx246" path="res://Scenes/FuseboxClose.tscn" id="20_wjoec"]
[ext_resource type="Texture2D" uid="uid://ysnpybetdxwd" path="res://Assets/electricityicon.png" id="21_vher1"]
[ext_resource type="PackedScene" uid="uid://cjpyo5axkiie8" path="res://Scenes/GateClosed.tscn" id="23_6g003"]

[sub_resource type="BoxShape3D" id="BoxShape3D_5fj6f"]
size = Vector3(1.2994995, 1.2765503, 0.11035156)

[sub_resource type="BoxShape3D" id="BoxShape3D_3nyfu"]
size = Vector3(1, 2.736206, 2.347168)

[sub_resource type="BoxShape3D" id="BoxShape3D_t3whr"]
size = Vector3(0.6641846, 2.7755127, 2.3065186)

[sub_resource type="BoxShape3D" id="BoxShape3D_a7eha"]
size = Vector3(0.04345703, 2.144104, 1.104126)

[sub_resource type="BoxShape3D" id="BoxShape3D_sgubx"]
size = Vector3(0.041137695, 2.2403564, 1.029419)

[sub_resource type="BoxShape3D" id="BoxShape3D_x1e6v"]
size = Vector3(0.031463623, 2.2488403, 1.3247375)

[sub_resource type="BoxShape3D" id="BoxShape3D_ac5tv"]
size = Vector3(0.019165039, 2.2601929, 1.1436157)

[sub_resource type="BoxShape3D" id="BoxShape3D_66v05"]
size = Vector3(0.015350342, 1.9898682, 1.2463379)

[sub_resource type="BoxShape3D" id="BoxShape3D_w5m3f"]
size = Vector3(0.024658203, 2.2550354, 1.1798096)

[sub_resource type="BoxShape3D" id="BoxShape3D_u7gkx"]
size = Vector3(1, 3.166504, 2.3077393)

[sub_resource type="BoxShape3D" id="BoxShape3D_h7tgk"]
size = Vector3(1, 3.1601563, 2.31604)

[sub_resource type="BoxShape3D" id="BoxShape3D_f063y"]
size = Vector3(2.0975342, 0.8051758, 0.8741455)

[sub_resource type="BoxShape3D" id="BoxShape3D_0kak2"]
size = Vector3(2.2730713, 0.62597656, 1.4420166)

[sub_resource type="BoxMesh" id="BoxMesh_0kak2"]

[sub_resource type="BoxShape3D" id="BoxShape3D_idyij"]
size = Vector3(0.16955566, 3.5111084, 2.2953491)

[sub_resource type="BoxShape3D" id="BoxShape3D_vher1"]
size = Vector3(0.16568756, 2.8619385, 2.3187866)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_idyij"]
albedo_color = Color(0.9030753, 0, 0.07757329, 1)

[sub_resource type="BoxMesh" id="BoxMesh_ffsuc"]
material = SubResource("StandardMaterial3D_idyij")

[sub_resource type="BoxShape3D" id="BoxShape3D_k700v"]
size = Vector3(1.947876, 2.046997, 1.7373047)

[sub_resource type="BoxShape3D" id="BoxShape3D_fqss4"]
size = Vector3(3.1015625, 2.7891846, 2.2185059)

[sub_resource type="BoxShape3D" id="BoxShape3D_gpw56"]
size = Vector3(3.091095, 2.7750854, 2.2364502)

[sub_resource type="BoxShape3D" id="BoxShape3D_tnwif"]
size = Vector3(3.1115723, 2.7891998, 2.2052002)

[node name="Node3D" type="Node3D"]
script = ExtResource("1_hp8h4")

[node name="HH_Art_Pinch_V2" parent="." instance=ExtResource("2_65vvi")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.007326126, 0.0070431232, -0.0001385212)

[node name="Player" type="CharacterBody3D" parent="."]
transform = Transform3D(0.75, 0, 0, 0, 0.75, 0, 0, 0, 0.75, 0.01, 0.623, -0.544)
script = ExtResource("3_k0vax")
room_detectors_path = NodePath("../RoomDetectors")

[node name="Sprite3D" type="Sprite3D" parent="Player"]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0.2178232, 1.0507035)
shaded = true
texture = ExtResource("4_8kvwi")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player"]
transform = Transform3D(0.99999976, 0, 0, 0, 0.99999976, 0, 0, 0, 0.99999976, 0.008636475, 0.0017394423, 1.0423431)
shape = SubResource("BoxShape3D_5fj6f")

[node name="PlayerSpawnPosition" type="Node3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.01, 0.62, -0.54)

[node name="Cameras" type="Node3D" parent="."]

[node name="Camera" type="Camera3D" parent="Cameras" groups=["MainCamera"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0150594935, 1.4396391, 2.9852402)
script = ExtResource("5_h0fs4")

[node name="MainCamPos" type="Node3D" parent="Cameras"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.01, 1.44, 2.985)

[node name="LeftCamPos" type="Node3D" parent="Cameras"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.8092403, 1.44, 2.985)

[node name="RightCamPos" type="Node3D" parent="Cameras"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.8, 1.44, 2.985)

[node name="Lights" type="Node3D" parent="."]

[node name="MiddleRoomLight" type="OmniLight3D" parent="Lights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.01, 1.5, 0.175)

[node name="LeftRoomLight" type="OmniLight3D" parent="Lights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 1.5, 0.175)

[node name="RightRoomLight" type="OmniLight3D" parent="Lights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.8, 1.5, 0.175)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Lights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9708586, 2.2142832)

[node name="LeftBulb" parent="Lights" instance=ExtResource("6_im5b3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 2.38, 0.175)

[node name="MiddleBulb" parent="Lights" instance=ExtResource("6_im5b3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.01, 2.38, 0.175)

[node name="RightBulb" parent="Lights" instance=ExtResource("6_im5b3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.8, 2.38, 0.175)

[node name="Borders" type="Node3D" parent="."]

[node name="LeftBorder" type="StaticBody3D" parent="Borders"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Borders/LeftBorder"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.9765244, 1.4651122, 0.20881987)
shape = SubResource("BoxShape3D_3nyfu")

[node name="RightBorder" type="StaticBody3D" parent="Borders"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Borders/RightBorder"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.7974815, 1.4510868, 0.21695828)
shape = SubResource("BoxShape3D_t3whr")

[node name="CameraTriggers" type="Node3D" parent="."]

[node name="RightRoomTrigger" type="Area3D" parent="CameraTriggers"]
script = ExtResource("7_ujorc")

[node name="CollisionShape3D" type="CollisionShape3D" parent="CameraTriggers/RightRoomTrigger"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.55, 1.09, 0.157)
shape = SubResource("BoxShape3D_a7eha")

[node name="LeftRoomTrigger" type="Area3D" parent="CameraTriggers"]
script = ExtResource("8_4byhf")

[node name="CollisionShape3D" type="CollisionShape3D" parent="CameraTriggers/LeftRoomTrigger"]
transform = Transform3D(0.99999994, 0, 0, 0, 1, 0, 0, 0, 0.99999994, -2.49, 1.09, 0.157)
shape = SubResource("BoxShape3D_sgubx")

[node name="MainRoomTrigger" type="Area3D" parent="CameraTriggers"]
script = ExtResource("9_rrcc2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="CameraTriggers/MainRoomTrigger"]
transform = Transform3D(0.99999994, 0, 0, 0, 1, 0, 0, 0, 0.99999994, -2.338675, 1.1417187, 0.05721879)
shape = SubResource("BoxShape3D_x1e6v")

[node name="CollisionShape3D22" type="CollisionShape3D" parent="CameraTriggers/MainRoomTrigger"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.2478268, 1.0860459, 0.087834835)
shape = SubResource("BoxShape3D_ac5tv")

[node name="LeftDoor" type="Node3D" parent="."]
script = ExtResource("10_jv0w1")

[node name="LeftLock" type="Sprite3D" parent="LeftDoor"]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, -1.5900272, 1.535344, -0.34809792)
texture = ExtResource("11_1s2xu")

[node name="LeftArea" type="StaticBody3D" parent="LeftDoor"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="LeftDoor/LeftArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.9318761, 1.01702, 0.09989405)
shape = SubResource("BoxShape3D_66v05")

[node name="HH_Art_DoorOpenLeftAnim_V1" parent="LeftDoor" instance=ExtResource("12_wjoec")]
transform = Transform3D(0.9998477, 0, 0.017452406, 0, 1, 0, -0.017452406, 0, 0.9998477, -2.4652753, 0, 0)

[node name="HH_Art_locks_openAnim_V1" parent="LeftDoor" instance=ExtResource("13_8kvwi")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.474749, 0, 0)

[node name="RightDoor" type="Node3D" parent="."]
script = ExtResource("12_8t08r")

[node name="RightLock" type="Sprite3D" parent="RightDoor"]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 1.596527, 1.53, -0.34)
texture = ExtResource("11_1s2xu")

[node name="RightArea" type="StaticBody3D" parent="RightDoor"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="RightDoor/RightArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.922808, 1.1224811, 0.11894977)
shape = SubResource("BoxShape3D_w5m3f")

[node name="HH_Art_DoorOpenRightAnim_v1" parent="RightDoor" instance=ExtResource("14_6vn0d")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.4721048, 0, 0)

[node name="HH_Art_locks_openAnim_V1" parent="RightDoor" instance=ExtResource("13_8kvwi")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5073116, 0, 0)

[node name="LeftWall" type="Node3D" parent="."]

[node name="LeftTrigger" type="Area3D" parent="LeftWall"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="LeftWall/LeftTrigger"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.496975, 1.353595, 0.1416626)
shape = SubResource("BoxShape3D_u7gkx")

[node name="LeftKey" type="Sprite3D" parent="LeftWall"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -6.2582235, 4.001706, 0)
visible = false
texture = ExtResource("13_now7m")

[node name="RightWall" type="Node3D" parent="."]

[node name="RightTrigger" type="Area3D" parent="RightWall"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="RightWall/RightTrigger"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.336784, 1.3515258, 0.1765747)
shape = SubResource("BoxShape3D_h7tgk")

[node name="RightKey" type="Sprite3D" parent="RightWall"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 6.26, 3.4326613, 0)
visible = false
texture = ExtResource("13_now7m")

[node name="Elevator" type="Node3D" parent="."]

[node name="ElevatorLock" type="Sprite3D" parent="Elevator"]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0.01, 1.4756831, -0.9583911)
texture = ExtResource("11_1s2xu")

[node name="Generator" type="Node3D" parent="."]
script = ExtResource("14_mnt33")
gate_node_path = NodePath("../Gate")

[node name="GeneratorModel" parent="Generator" instance=ExtResource("15_mvhw6")]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, -6.1056037, 0, -0.16973802)

[node name="StaticBody3D" type="StaticBody3D" parent="Generator/GeneratorModel"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Generator/GeneratorModel/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5487671, 0.4333496, 0.0010375977)
shape = SubResource("BoxShape3D_f063y")

[node name="Puddle" type="Node3D" parent="."]
script = ExtResource("16_vhof8")

[node name="HH_Art_Puddle_v1" parent="Puddle" instance=ExtResource("17_j6cut")]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, 6.28949, 0.091492236, 0.22333205)

[node name="PuddleTrigger" type="Area3D" parent="Puddle"]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, 6.28949, 0.091492236, 0.22333205)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Puddle/PuddleTrigger"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.03875731, -0.18701172, 0.22735596)
shape = SubResource("BoxShape3D_0kak2")

[node name="FuseBox" type="Node3D" parent="."]
script = ExtResource("18_1d7ht")
puddle_node_path = NodePath("../Puddle")

[node name="MeshInstance3D" type="MeshInstance3D" parent="FuseBox"]
transform = Transform3D(0.07773701, 0, 0.10943962, 0, 1.0340936, 0, -0.022290729, 0, 0.38166133, 6.7573504, 1.1621119, 0.13876653)
visible = false
mesh = SubResource("BoxMesh_0kak2")

[node name="HH_Art_FuseBoxAni_V2" parent="FuseBox" instance=ExtResource("20_wjoec")]
transform = Transform3D(0.9563048, 0, 0.2923717, 0, 1, 0, -0.2923717, 0, 0.9563048, 1.3900285, 0.31998253, -17.256184)

[node name="Gate" type="Node3D" parent="."]
script = ExtResource("19_or1os")
fusebox_indicator_path = NodePath("../Indicators/FuseboxIndicator")

[node name="Metal" type="Sprite3D" parent="Gate"]
transform = Transform3D(0.017574126, 0, 0, 0, 0.31978706, 0, 0, 0, 0.1, -4.473, 1.457, 0.3)
visible = false
texture = ExtResource("20_4rm4j")

[node name="Electric" type="Sprite3D" parent="Gate"]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, -4.5703135, 1.4310222, 0.384692)
texture = ExtResource("21_vher1")

[node name="StaticBody3D" type="StaticBody3D" parent="Gate"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Gate/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.630808, 1.2555542, 0.20376587)
shape = SubResource("BoxShape3D_idyij")

[node name="GateTrigger" type="Area3D" parent="Gate"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Gate/GateTrigger"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.6097198, 1.4451294, 0.19985962)
shape = SubResource("BoxShape3D_vher1")

[node name="HH_Art_GateAni_V2" parent="Gate" instance=ExtResource("23_6g003")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.6319113, 0, 0)

[node name="Indicators" type="Node3D" parent="."]

[node name="GeneratorIndicator" type="MeshInstance3D" parent="Indicators"]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.01, -6.0208406, 1.5952797, 0)
mesh = SubResource("BoxMesh_ffsuc")

[node name="PuddleIndicator" type="MeshInstance3D" parent="Indicators"]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.01, 5.5828667, 0.57664955, 0)
mesh = SubResource("BoxMesh_ffsuc")

[node name="FuseboxIndicator" type="MeshInstance3D" parent="Indicators"]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.01, 6.5144296, 1.9006244, 0)
mesh = SubResource("BoxMesh_ffsuc")

[node name="GateIndicator" type="MeshInstance3D" parent="Indicators"]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.01, -4.104617, 1.6853055, 0)
mesh = SubResource("BoxMesh_ffsuc")

[node name="ElevatorDoor" type="Node3D" parent="."]

[node name="Area3D" type="Area3D" parent="ElevatorDoor"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="ElevatorDoor/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00030517578, 1.1346064, -0.43408203)
shape = SubResource("BoxShape3D_k700v")

[node name="RoomDetectors" type="Node3D" parent="."]

[node name="MainRoom" type="Area3D" parent="RoomDetectors"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="RoomDetectors/MainRoom"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0068359375, 1.412344, 0.19763184)
shape = SubResource("BoxShape3D_fqss4")

[node name="MainRoomCenter" type="Node3D" parent="RoomDetectors/MainRoom"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.62, 0)

[node name="LeftRoom" type="Area3D" parent="RoomDetectors"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="RoomDetectors/LeftRoom"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.925584, 1.4312717, 0.20367432)
shape = SubResource("BoxShape3D_gpw56")

[node name="LeftRoomCenter" type="Node3D" parent="RoomDetectors/LeftRoom"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.9772751, 0.62, 0)

[node name="RightRoom" type="Area3D" parent="RoomDetectors"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="RoomDetectors/RightRoom"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.902652, 1.4417982, 0.23797607)
shape = SubResource("BoxShape3D_tnwif")

[node name="RightRoomCenter" type="Node3D" parent="RoomDetectors/RightRoom"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.8, 0.62, 0)

[connection signal="body_entered" from="CameraTriggers/RightRoomTrigger" to="CameraTriggers/RightRoomTrigger" method="_on_body_entered"]
[connection signal="body_entered" from="CameraTriggers/LeftRoomTrigger" to="CameraTriggers/LeftRoomTrigger" method="_on_body_entered"]
[connection signal="body_entered" from="CameraTriggers/MainRoomTrigger" to="CameraTriggers/MainRoomTrigger" method="_on_body_entered"]
[connection signal="body_entered" from="LeftWall/LeftTrigger" to="." method="_on_left_trigger_body_entered"]
[connection signal="body_entered" from="RightWall/RightTrigger" to="." method="_on_right_trigger_body_entered"]
[connection signal="body_entered" from="Gate/GateTrigger" to="Gate" method="_on_gate_trigger_body_entered"]
[connection signal="body_entered" from="ElevatorDoor/Area3D" to="." method="_on_area_3d_body_entered"]
